--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Version 3.8.4
+~~~~~~~~~~~~~
+Released: 2014-01-08
+
+* Translations
+ - Updated Russian translation (Julia Dronova)
+ - Updated Finnish translation (Lasse Liehu)
+ - Updated Japanese translation (victory)
+
+* Bugfix:
+ - Correct the approximate timings in the calibration dialog (Pascal de Bruijn)
+ - Generate display profiles with a perceptual rendering intent (Pascal de Bruijn)
+ - Make it work with dispcal using stderr (Patryk Zawadzki)
+
 Version 3.8.3
 ~~~~~~~~~~~~~
 Released: 2013-09-13
