--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+Version 3.11.5
+~~~~~~~~~~~~~~
+Released: 2014-02-03
+
+* Translations
+ - Update Chinese simplified translation (Tong Hui)
+ - Updated Assamese translation (Nilamdyuti Goswami)
+ - Updated Brazilian Portuguese translation (Enrico Nicoletto)
+ - Updated Galician translation (Fran Diéguez)
+ - Updated German translation (Benjamin Steinwender)
+ - Updated Greek translation (Dimitris Spingos)
+ - Updated Hebrew translation (Yosef Or Boczko)
+ - Updated Italian translation (Milo Casagrande)
+ - Updated Lithuanian translation (Aurimas Černius)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Spanish translation (Daniel Mustieles)
+ - Updated Tajik translation (Victor Ibragimov)
+ - Updated Traditional Chinese translation (Cheng-Chia Tseng)
+
+* Bugfix:
+ - Fix a potential crash if dispcal started giving unexpected data (Richard Hughes)
+ - Prevent a crash in gcm-viewer when the ICC profile cannot be loaded (Richard Hughes)
+
 Version 3.11.3
 ~~~~~~~~~~~~~~
 Released: 2013-12-17
