--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Version 3.11.90
+~~~~~~~~~~~~~~~
+Released: 2014-02-17
+
+* Translations
+* New Features:
+* Bugfix:
+ - Updated Korean translation (Shankar Prasad)
+ - Updated Ukrainian translation (Daniel Korostil)
+ - Roughly shape test window to instrument (Pascal de Bruijn)
+
 Version 3.11.5
 ~~~~~~~~~~~~~~
 Released: 2014-02-03
