Updated Norwegian bokmål translation

--- a/po/nb.po
+++ b/po/nb.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager 3.11.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-05 06:49+0100\n"
-"PO-Revision-Date: 2014-03-05 06:51+0100\n"
+"POT-Creation-Date: 2014-03-20 08:20+0100\n"
+"PO-Revision-Date: 2014-03-21 15:59+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
@@ -197,7 +197,7 @@ msgstr "x"
 
 #: ../data/gcm-viewer.ui.h:31
 msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
-msgstr ""
+msgstr "Et CIE 1931-diagram viser en 2D-representasjon av profilens gamut"
 
 #: ../data/gcm-viewer.ui.h:32
 msgid "CIE 1931"
@@ -215,7 +215,7 @@ msgstr "Svar inn"
 msgid ""
 "A tone reproduction curve is the mapping of scene luminance to display "
 "luminance"
-msgstr ""
+msgstr "En tonegjengivelseskurve viser forholdet mellom luminans for bilde og skjerm"
 
 #: ../data/gcm-viewer.ui.h:36
 msgid "TRC"
@@ -1007,8 +1007,9 @@ msgid "LCD (RGB LED backlight)"
 msgstr "LCD (RGB LED-baklys)"
 
 #: ../src/gcm-calibrate-main.c:1466
+#, fuzzy
 msgid "LCD (Wide Gamut RGB LED backlight)"
-msgstr ""
+msgstr "LCD ("
 
 #: ../src/gcm-calibrate-main.c:1475
 msgid "LCD (Wide Gamut CCFL backlight)"
@@ -1698,7 +1699,7 @@ msgstr "Grå akse er ikke monoton"
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:941
 msgid "One or more of the primaries are invalid"
-msgstr ""
+msgstr "En av flere av hovedverdiene er ugyldig"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:945
@@ -1708,7 +1709,7 @@ msgstr ""
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:949
 msgid "One or more of the primaries is unlikely"
-msgstr ""
+msgstr "En eller flere av hovedverdiene er usannsynlig"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:953
