--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,28 @@
+Version 3.12.0
+~~~~~~~~~~~~~~
+Released: 2014-03-24
+
+* Translations
+ - Updated Basque translation (Inaki Larranaga Murgoitio)
+ - Updated Catalan translation (Pau Iranzo)
+ - Updated Czech translation (Milan Knížek)
+ - Updated Danish translation (Kenneth Nielsen)
+ - Updated Finnish translation (Jiri Grönroos)
+ - Updated French translation (Claude Paroz)
+ - Updated Hungarian translation (Gábor Kelemen)
+ - Updated Indonesian translation (Andika Triwidada)
+ - Updated Korean translation (Changwoo Ryu)
+ - Updated Latvian translation (Rūdolfs Mazurs)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Portuguese translation (Tiagosdot)
+ - Updated Punjabi translation (A S Alam)
+ - Updated Russian translation (Yuri Myasoedov)
+ - Updated Serbian translation (Мирослав Николић)
+ - Updated slovak translation (Dušan Kazik)
+ - Updated Slovenian translation (Matej Urbančič)
+ - Updated Traditional Chinese translation (Cheng-Chia Tseng)
+
 Version 3.11.90
 ~~~~~~~~~~~~~~~
 Released: 2014-02-17
