--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Version 3.12.1
+~~~~~~~~~~~~~~
+Released: 2014-04-11
+
+* Translations
+ - Updated Japanese translation (Ikuya Awashiro, Jiro Matsuzawa)
+
+* Bugfix:
+ - Actually show the gcm-viewer preview when changing profiles (Richard Hughes)
+ - Fix several critical warnings when using gcm-viewer (Richard Hughes)
+ - Speed up deleting profiles by an order of magnitude (Richard Hughes)
+
 Version 3.12.0
 ~~~~~~~~~~~~~~
 Released: 2014-03-24
