--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,38 @@
+Version 3.13.1
+~~~~~~~~~~~~~~
+Released: 2014-04-28
+
+* Translations
+ - Updated Basque translation (Inaki Larranaga Murgoitio)
+ - Updated Catalan translation (Pau Iranzo)
+ - Updated Czech translation (Milan Knížek)
+ - Updated Danish translation (Kenneth Nielsen)
+ - Updated Dutch translation by Erwin Poeze (Reinout van Schouwen)
+ - Updated Finnish translation (Jiri Grönroos)
+ - Updated French translation (Claude Paroz)
+ - Updated Hungarian translation (Gábor Kelemen)
+ - Updated Indonesian translation (Andika Triwidada)
+ - Updated Japanese translation (Ikuya Awashiro)
+ - Updated Japanese translation (Jiro Matsuzawa)
+ - Updated Korean translation (Changwoo Ryu)
+ - Updated Latvian translation (Rūdolfs Mazurs)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Portuguese translation (Tiagosdot)
+ - Updated Punjabi translation (A S Alam)
+ - Updated Russian translation (Yuri Myasoedov)
+ - Updated Slovak translation (Dušan Kazik)
+ - Updated Slovenian translation (Matej Urbančič)
+ - Updated Traditional Chinese translation (Cheng-Chia Tseng)
+
+* New Features:
+ - Use CdTransform to convert the sample image (Richard Hughes)
+
+* Bugfix:
+ - Fix gcm_utils_image_convert() to not crash for large images (Richard Hughes)
+ - Fix several critical warnings when using gcm-viewer (Richard Hughes)
+ - Speed up deleting profiles by an order of magnitude (Richard Hughes)
+
 Version 3.11.90
 ~~~~~~~~~~~~~~~
 Released: 2014-02-17
