--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Version 3.12.2
+~~~~~~~~~~~~~~
+Released: 2014-05-12
+
+* Translations
+ - Updated Catalan (Valencian) translation (Carles Ferrando)
+ - Updated Dutch translation (Erwin Poeze)
+ - Updated Indonesian translation (Dirgita)
+
 Version 3.12.1
 ~~~~~~~~~~~~~~
 Released: 2014-04-11
