--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Version 3.12.3
+~~~~~~~~~~~~~~
+Released: 2014-07-08
+
+* Translations
+ - Added Hungarian translation (Balázs Úr)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+
+* Bugfix:
+ - Add <project_license> to the AppData file (Richard Hughes)
+ - Coherent display kind enum ordering (Pascal de Bruijn)
+ - Roughly shape test window to calibration instrument (Pascal de Bruijn)
+
 Version 3.12.2
 ~~~~~~~~~~~~~~
 Released: 2014-05-12
