--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+Version 3.13.90
+~~~~~~~~~~~~~~~
+Released: 2014-08-18
+
+* Translations
+ - Added Hungarian translation (Balázs Úr)
+ - Updated Catalan (Valencian) translation (Carles Ferrando)
+ - Updated Finnish help translation (Sami Jaktholm)
+ - Updated Greek translation (Tom Tryfonidis)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Romanian Translation (Daniel Șerbănescu)
+ - Updated Swedish translation (Mattias Eriksson)
+ - Updated Turkish translation (Muhammet Kara)
+
+* New Features:
+ - Roughly shape test window to instrument (extra clearance) (Pascal de Bruijn)
+ - Use APPSTREAM_XML to validate AppData from libappstream-glib (Richard Hughes)
+
+* Bugfix:
+ - Add <project_license> to the AppData file (Richard Hughes)
+ - Coherent display kind enum ordering (Pascal de Bruijn)
+ - Do not lock every time we sample in gcm-picker (Richard Hughes)
+ - Port to vte-2.91 API (Debarshi Ray)
+
 Version 3.13.1
 ~~~~~~~~~~~~~~
 Released: 2014-04-28
