--- a/po/ko.po
+++ b/po/ko.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
 "POT-Creation-Date: 2014-03-05 07:15+0000\n"
-"PO-Revision-Date: 2014-03-06 02:09+0900\n"
+"PO-Revision-Date: 2014-09-06 03:39+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr@googlegroups.com>\n"
 "Language: Korean\n"
@@ -1584,7 +1584,7 @@ msgstr "프레임워크 버전"
 #. TRANSLATORS: Where the profile data came from, e.g. 'test' or 'standard'
 #: ../src/gcm-viewer.c:780
 msgid "Data source type"
-msgstr "데이터 "
+msgstr "데이터 원본 종류"
 
 #. TRANSLATORS: how the qualifier is formatted, e.g. 'ColorSpace.Paper.DPI'
 #: ../src/gcm-viewer.c:782
