--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+Version 3.14.0
+~~~~~~~~~~~~~~~
+Released: 2014-09-23
+
+* Translations
+ - Added Nepali translation (Pawan Chitrakar)
+ - Updated Bengali (India) translation (Saibal Ray)
+ - Updated Finnish translation (Jiri Grönroos)
+ - Updated Gujarati translation (Sweta Kothari)
+ - Updated Hindi translation (Rajesh Ranjan)
+ - Updated Kannada translation (Shankar Prasad)
+ - Updated Korean translation (Changwoo Ryu)
+ - Updated Marathi translation (Sandeep Sheshrao Shedmake)
+ - Updated Nepali translation (Pawan Chitrakar)
+ - Updated Oriya translation (Manoj Kumar Giri)
+ - Updated Serbian translation (Мирослав Николић)
+ - Updated Tamil translation (Shantha kumar)
+
 Version 3.13.90
 ~~~~~~~~~~~~~~~
 Released: 2014-08-18
