Updated Korean translation

--- a/po/ko.po
+++ b/po/ko.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
 "POT-Creation-Date: 2014-09-17 06:16+0000\n"
-"PO-Revision-Date: 2014-09-18 02:51+0900\n"
+"PO-Revision-Date: 2014-10-05 19:46+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr@googlegroups.com>\n"
 "Language: Korean\n"
@@ -322,7 +322,7 @@ msgstr "프로파일 만드는 중"
 
 #: ../src/gcm-calibrate-argyll.c:724
 msgid "Generating the ICC color profile that can be used with this screen."
-msgstr "이 화면에서 사용할 수 있는 ICC 색 프로파일을 만드 중입니다."
+msgstr "이 화면에서 사용할 수 있는 ICC 색 프로파일을 만드는 중입니다."
 
 #: ../src/gcm-calibrate-argyll.c:895
 msgid "Copying files"
