--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Version 3.14.1
+~~~~~~~~~~~~~~~
+Released: 2014-10-12
+
+* Translations
+ - Added Friulian translation (Fabio Tomat)
+ - Updated Bengali (India) translation (Saibal Ray)
+ - Updated Korean translation (Changwoo Ryu)
+ - Updated Telugu translation (Krishnababu Krothapalli)
+ - Updates Persian translation (Arash Mousavi)
+
+* Bugfix:
+ - Prevent a crash when profiling a printer (Richard Hughes)
+
 Version 3.14.0
 ~~~~~~~~~~~~~~~
 Released: 2014-09-23
