--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 3.14.2
+~~~~~~~~~~~~~~~
+Released: 2014-11-10
+
+* Translations
+ - Updated Kazakh translation (Baurzhan Muftakhidinov)
+
 Version 3.14.1
 ~~~~~~~~~~~~~~~
 Released: 2014-10-12
