--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+Version 3.15.4
+~~~~~~~~~~~~~~~
+Released: 2015-01-19
+
+* Translations
+ - Update Catalan help translation (Manel Vidal)
+ - Updated Basque language (Inaki Larranaga Murgoitio)
+ - Updated Brazilian Portuguese translation (Rafael Ferreira)
+ - Updated German translation (Bernd Homuth)
+ - Updated Hungarian translation (Balázs Úr)
+ - Updated Indonesian translation (Andika Triwidada)
+ - Updated Russian translation (Stas Solovey)
+ - Updated Spanish translation (Daniel Mustieles)
+ - Updated Vietnamese translation (Trần Ngọc Quân)
+
+* Bugfix:
+ - Remove NoDisplay=true from the gcm-viewer desktop file (Richard Hughes)
+
 Version 3.14.2
 ~~~~~~~~~~~~~~~
 Released: 2014-11-10
